# Tasmota-smartpowersaver

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: CONCEPT_AND_SPEC.md  grafana-dashboard.json
scripts/: README.md  analyze_thresholds.py  mqtt_dry_run_controller.py  mqtt_probe.py  record_power.py
src/desk_power_guardian/: __init__.py  activity.py  actuator.py  config.py  db.py  main.py  metrics.py  notifier.py  script_support.py  service.py  telemetry.py
tests/: test_activity.py  test_metrics.py  test_notifier.py  test_service_integration.py  test_service_reconciliation.py
